# AGI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GITHUB_RELEASE_PUBLISHED.md  LICENSE  OFFICIAL_RELEASE_v0.2.0.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.2.0.md  UPGRADE_SUMMARY_v0.2.0.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
agents/: __init__.py  base_agent.py  crew.py
algorithms/: __init__.py  advanced_algorithms.py  core_algorithms.py
configs/: config.yaml  data.toml  infra.toml  model.toml  train.toml
core/: __init__.py  agent_executor.py  agi_engine.py  self_improvement_engine.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  QUICK_REFERENCE.md  ROADMAP.md
docs/deepdive/: MODULE_REFERENCE.md
evaluation/: __init__.py  benchmark_runner.py  benchmarks.py  metrics.py
examples/: multi_agent_patterns.py  quickstart.py
experiments/: __init__.py  eval_example.py  train_example.py
infra/k8s/: train-job.yaml
infrastructure/: __init__.py  advanced_infrastructure.py  distributed_training.py  observability.py
memory/: __init__.py  hybrid_memory.py
reasoning/: __init__.py  reasoning_patterns.py
scripts/: init_directories.py  run_demo.py
src/agi_platform/: __init__.py  config.py  main.py
src/agi_platform/cognition/: __init__.py  agent.py  memory.py  planner.py  self_model.py  world_model.py
src/agi_platform/data/: __init__.py  generators.py  pipeline.py  schemas.py
src/agi_platform/infra/: __init__.py  launcher.py  topology.py
src/agi_platform/safety/: __init__.py  governance.py
src/agi_platform/training/: __init__.py  curriculum.py  objectives.py  self_improve.py  trainer.py
tests/: test_integration.py  test_training_loop.py
tools/: __init__.py
training/: __init__.py  advanced_training.py  training_systems.py
utils/: __init__.py  helpers.py
